--- a/Assets/Editor/ConditionListVisualTree.uxml
+++ b/Assets/Editor/ConditionListVisualTree.uxml
@@ -3,7 +3,7 @@
     <ui:VisualElement name="Pane" style="flex-direction: column; align-items: stretch;">
         <ui:VisualElement name="Vars" style="height: auto;">
             <ui:Label text="Condition List" display-tooltip-when-elided="true" style="-unity-font-style: bold; font-size: 25px; -unity-text-align: upper-center; white-space: normal;" />
-            <uie:PropertyField binding-path="BTG_conditions" style="background-color: rgba(42, 42, 42, 255); border-left-width: 15px; border-right-width: 15px; border-top-width: 15px; border-bottom-width: 15px; border-top-left-radius: 6px; border-bottom-left-radius: 6px; border-top-right-radius: 6px; border-bottom-right-radius: 6px;" />
+            <uie:PropertyField binding-path="BTG_conditions" class="unity-scroll-view unity-list-view__recordable-item unity-list-view__recorderable-item unity-collection-view" style="background-color: rgb(49, 98, 154); border-left-width: 15px; border-right-width: 15px; border-top-width: 15px; border-bottom-width: 15px; border-top-left-radius: 6px; border-bottom-left-radius: 6px; border-top-right-radius: 6px; border-bottom-right-radius: 6px; opacity: 1; -unity-background-image-tint-color: rgb(255, 255, 255);" />
         </ui:VisualElement>
         <ui:VisualElement name="Buttons" style="height: 200px; flex-direction: column;">
             <ui:Button text="Button" display-tooltip-when-elided="true" class="button" />
