--- a/Assets/Editor/ConditionListVisualTree.uxml
+++ b/Assets/Editor/ConditionListVisualTree.uxml
@@ -3,7 +3,10 @@
     <ui:VisualElement name="Pane" style="flex-direction: column; align-items: stretch;">
         <ui:VisualElement name="Vars">
             <ui:Label text="Condition List" display-tooltip-when-elided="true" style="-unity-font-style: bold; font-size: 25px; -unity-text-align: upper-center; white-space: normal;" />
-            <uie:PropertyField binding-path="BTG_conditions" class="unity-scroll-view unity-list-view__recordable-item unity-list-view__recorderable-item unity-collection-view unity-collectionview content-container" style="background-color: rgb(67, 138, 180); border-left-width: 15px; border-right-width: 15px; border-top-width: 15px; border-bottom-width: 15px; border-top-left-radius: 6px; border-bottom-left-radius: 6px; border-top-right-radius: 6px; border-bottom-right-radius: 6px; opacity: 1; -unity-background-image-tint-color: rgb(255, 255, 255); height: auto;" />
+            <uie:PropertyField binding-path="BTG_conditions" class="unity-scroll-view unity-list-view__recordable-item unity-list-view__recorderable-item unity-collection-view unity-collectionview content-container unity-list-view__recorderable-handle-bar" style="background-color: rgb(67, 138, 180); border-left-width: 15px; border-right-width: 15px; border-top-width: 15px; border-bottom-width: 15px; border-top-left-radius: 6px; border-bottom-left-radius: 6px; border-top-right-radius: 6px; border-bottom-right-radius: 6px; opacity: 1; -unity-background-image-tint-color: rgb(255, 255, 255); height: auto;" />
+        </ui:VisualElement>
+        <ui:VisualElement name="Button" style="flex-direction: column; align-items: center;">
+            <ui:Button text="Reset Conditions" display-tooltip-when-elided="true" name="ResetButton" class="button" style="-unity-text-align: middle-center; white-space: nowrap;" />
         </ui:VisualElement>
     </ui:VisualElement>
 </ui:UXML>
