--- a/Assets/FiniteStateMachine/EditorWindow/FiniteStateGraphEditor.uxml
+++ b/Assets/FiniteStateMachine/EditorWindow/FiniteStateGraphEditor.uxml
@@ -1,13 +1,13 @@
 <ui:UXML xmlns:ui="UnityEngine.UIElements" xmlns:uie="UnityEditor.UIElements" xsi="http://www.w3.org/2001/XMLSchema-instance" engine="UnityEngine.UIElements" editor="UnityEditor.UIElements" noNamespaceSchemaLocation="../../../UIElementsSchema/UIElements.xsd" editor-extension-mode="True">
     <Style src="project://database/Assets/FiniteStateMachine/EditorWindow/FiniteStateGraphEditor.uss?fileID=7433441132597879392&amp;guid=a9cdb5a2ea189a740a65f32d30115577&amp;type=3#FiniteStateGraphEditor" />
     <SplitView fixed-pane-initial-dimension="300" style="display: flex;">
-        <ui:VisualElement name="left-panel" style="width: auto; min-width: auto; display: flex; flex-direction: column;">
-            <ui:Label text="Inspector" display-tooltip-when-elided="true" style="min-width: auto; width: auto;" />
-            <InspectorView style="flex-grow: 1; min-width: auto; opacity: 1; width: auto;" />
-        </ui:VisualElement>
         <ui:VisualElement name="right-panel">
-            <ui:Label text="FSM View" display-tooltip-when-elided="true" />
+            <ui:Label text="FSM View" display-tooltip-when-elided="true" style="color: rgb(255, 255, 255); font-size: 20px; -unity-font-style: bold; -unity-text-align: upper-center; background-color: rgb(58, 87, 137);" />
             <FiniteStateGraphView focusable="true" style="flex-grow: 1;" />
+        </ui:VisualElement>
+        <ui:VisualElement name="left-panel" style="width: auto; min-width: auto; display: flex; flex-direction: column;">
+            <ui:Label text="Inspector" display-tooltip-when-elided="true" style="min-width: auto; width: auto; background-color: rgb(131, 191, 255); color: rgb(41, 54, 103); -unity-text-align: upper-center; font-size: 20px; -unity-font-style: bold;" />
+            <InspectorView style="flex-grow: 1; min-width: auto; opacity: 1; width: auto; background-color: rgb(83, 125, 171);" />
         </ui:VisualElement>
     </SplitView>
 </ui:UXML>
