--- a/Assets/FiniteStateMachine/EditorWindow/StateViewStyle.uss
+++ b/Assets/FiniteStateMachine/EditorWindow/StateViewStyle.uss
@@ -1,13 +1,13 @@
 #node-border {
     background-color: rgb(56, 56, 56);
-    border-left-width: 3px;
-    border-right-width: 3px;
-    border-top-width: 3px;
-    border-bottom-width: 3px;
-    border-top-left-radius: 5px;
-    border-bottom-left-radius: 5px;
-    border-top-right-radius: 5px;
-    border-bottom-right-radius: 5px;
+    border-left-width: 7px;
+    border-right-width: 7px;
+    border-top-width: 7px;
+    border-bottom-width: 7px;
+    border-top-left-radius: 25px;
+    border-bottom-left-radius: 25px;
+    border-top-right-radius: 25px;
+    border-bottom-right-radius: 25px;
     border-left-color: rgb(32, 32, 32);
     border-right-color: rgb(32, 32, 32);
     border-top-color: rgb(32, 32, 32);
@@ -47,24 +47,32 @@
     top: 0;
     right: 0;
     bottom: 0;
-    border-top-left-radius: 4px;
-    border-bottom-left-radius: 4px;
-    border-top-right-radius: 4px;
-    border-bottom-right-radius: 4px;
+    border-top-left-radius: 25px;
+    border-bottom-left-radius: 25px;
+    border-top-right-radius: 25px;
+    border-bottom-right-radius: 25px;
+    transition-duration: 0.25s;
 }
 
 :hover > #selection-border {
-    border-left-width: 2px;
-    border-right-width: 2px;
-    border-top-width: 2px;
-    border-bottom-width: 2px;
+    border-left-width: 4px;
+    border-right-width: 4px;
+    border-top-width: 4px;
+    border-bottom-width: 4px;
 }
 
 :selected > #selection-border {
-    border-left-width: 3px;
-    border-right-width: 3px;
-    border-top-width: 3px;
-    border-bottom-width: 3px;
+    border-left-width: 5px;
+    border-right-width: 5px;
+    border-top-width: 5px;
+    border-bottom-width: 5px;
+}
+
+:hover:selected > #selection-border {
+    border-left-width: 7px;
+    border-right-width: 7px;
+    border-top-width: 7px;
+    border-bottom-width: 7px;
 }
 
 .node {
@@ -77,7 +85,6 @@
 
 #title {
     -unity-font-style: bold;
-    font-size: 14px;
     -unity-text-align: lower-center;
     margin-top: 0;
     margin-bottom: 0;
@@ -93,6 +100,7 @@
     max-width: 130px;
     align-items: center;
     white-space: normal;
+    font-size: 14px;
 }
 
 #description {
@@ -100,6 +108,7 @@
     max-width: 120px;
     justify-content: flex-start;
     align-items: center;
+    -unity-text-align: upper-center;
 }
 
 #divider {
@@ -110,8 +119,6 @@
 .White #title {
     background-color: rgb(255, 255, 255);
     color: rgb(19, 19, 19);
-    font-size: 14px;
-    -unity-font-style: bold;
     -unity-slice-top: 5;
     -unity-slice-bottom: 5;
     margin-left: 0;
@@ -126,10 +133,8 @@
 }
 
 .Purple #title {
-    font-size: 14px;
     background-color: rgb(205, 91, 217);
     color: rgb(37, 26, 43);
-    -unity-font-style: bold;
 }
 
 .Blue #title {
@@ -162,51 +167,32 @@
     left: 0;
     top: 0;
     right: 0;
-    background-color: rgb(32, 32, 32);
-    border-left-width: 1px;
-    border-right-width: 1px;
-    border-top-width: 1px;
-    border-bottom-width: 1px;
-    border-top-left-radius: 1px;
-    border-bottom-left-radius: 1px;
-    border-top-right-radius: 1px;
-    border-bottom-right-radius: 1px;
     flex-grow: 1;
     bottom: 0;
+    scale: 1.05 1.05;
+    border-top-left-radius: 40px;
+    border-bottom-left-radius: 40px;
+    border-top-right-radius: 40px;
+    border-bottom-right-radius: 40px;
 }
 
-.running #node-state {
-    background-color: rgba(255, 228, 0, 255);
-    border-left-width: 5px;
-    border-right-width: 5px;
-    border-top-width: 5px;
-    border-bottom-width: 5px;
-    border-top-left-radius: 5px;
-    border-bottom-left-radius: 5px;
-    border-top-right-radius: 5px;
-    border-bottom-right-radius: 5px;
+.running #node-border {
+    border-left-color: rgba(255, 228, 0, 255);
+    border-right-color: rgba(255, 228, 0, 255);
+    border-top-color: rgba(255, 228, 0, 255);
+    border-bottom-color: rgba(255, 228, 0, 255);
 }
 
-.success #node-state {
-    background-color: rgba(32, 207, 0, 0.63);
-    border-left-width: 5px;
-    border-right-width: 5px;
-    border-top-width: 5px;
-    border-bottom-width: 5px;
-    border-top-left-radius: 5px;
-    border-bottom-left-radius: 5px;
-    border-top-right-radius: 5px;
-    border-bottom-right-radius: 5px;
+.success #node-border {
+    border-left-color: rgba(32, 207, 0, 255);
+    border-right-color: rgba(32, 207, 0, 255);
+    border-top-color: rgba(32, 207, 0, 255);
+    border-bottom-color: rgba(32, 207, 0, 255);
 }
 
-.failure #node-state {
-    -unity-text-outline-color: rgba(255, 0, 0, 0.73);
-    border-left-width: 5px;
-    border-right-width: 5px;
-    border-top-width: 5px;
-    border-bottom-width: 5px;
-    border-top-left-radius: 5px;
-    border-bottom-left-radius: 5px;
-    border-top-right-radius: 5px;
-    border-bottom-right-radius: 5px;
+.failure #node-border {
+    border-left-color: rgba(255, 8, 0, 255);
+    border-right-color: rgba(255, 8, 0, 255);
+    border-top-color: rgba(255, 8, 0, 255);
+    border-bottom-color: rgba(255, 8, 0, 255);
 }
